--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -16,11 +16,26 @@
   }
 
   #input-field-holder input {
-    @apply py-2 px-6 border-solid border-gray-300 border-[1px] outline-none rounded-lg drop-shadow-md;
+    @apply py-2 h-10 px-6 border-solid border-gray-300 border-[1px] outline-none rounded-lg drop-shadow-md;
   }
 
   #input-field-holder * {
     @apply transition-all duration-300;
+  }
+
+  #engine-choice p {
+    @apply mr-4 text-gray-500 text-sm transition-all duration-200 cursor-pointer
+           after:block after:content-[''] after:w-0 after:relative 
+           after:left-1/2 after:-translate-x-1/2 after:h-[2px] after:bg-black
+           after:mt-1 after:transition-all after:duration-200;
+  }
+
+  #engine-choice p:not(.active) {
+    @apply hover:text-black hover:after:w-3;
+  }
+
+  #engine-choice p.active {
+    @apply text-black after:w-[50%];
   }
 }
 
